# mydullrepo

./: .bazelrc  BUILD  README.md  WORKSPACE  buildbuddy.yaml  deploy.sh  test.sh
go/: BUILD.bazel  configure.sh  deploy.sh  main.go
