load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:push.bzl", "container_push")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "foo",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_image",
    binary = ":go",
)

container_push(
    name = "go_image_push",
    format = "Docker",
    image = ":go_image",
    registry = "gcr.io",
    repository = "desolate-wasteland/go_image",
)

sh_binary(
    name = "configure",
    srcs = ["configure.sh"],
    data = ["@gcloud"],
)

sh_binary(
    name = "deploy",
    srcs = ["deploy.sh"],
    data = ["@gcloud"],
)
